[gd_scene load_steps=7 format=2]

[ext_resource path="res://themes/font.tres" type="DynamicFontData" id=1]
[ext_resource path="res://themes/theme.tres" type="Theme" id=2]
[ext_resource path="res://scripts/menu/splash_screen.gd" type="Script" id=3]
[ext_resource path="res://textures/misc/splash_screen.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "splash"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("logo:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 1, 1.3, 1.4, 2.4, 2.5, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1.25, 1.25 ), Vector2( 1, 1 ), Vector2( 1, 1 ), Vector2( 1.25, 1.25 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("logo:self_modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 1, 1.3, 2.5, 2.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 3 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "end_splash"
} ]
}

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="splash_screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
script = ExtResource( 3 )

[node name="tint" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="logo" type="TextureRect" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -192.0
margin_right = 192.0
margin_bottom = 192.0
rect_scale = Vector2( 1e-05, 1e-05 )
rect_pivot_offset = Vector2( 192, 192 )
hint_tooltip = "У даши и лизы сдохла вся семья и их ебут отчимы Кирилла 993*993 раза в день!!!"
texture = ExtResource( 4 )
expand = true
stretch_mode = 6

[node name="anim" type="AnimationPlayer" parent="."]
anims/splash = SubResource( 1 )

[node name="privacy_policy" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -120.0
margin_right = 200.0
margin_bottom = 120.0
popup_exclusive = true
window_title = "ss.pp.title"

[node name="thanks" type="Label" parent="privacy_policy"]
anchor_right = 1.0
margin_top = 8.0
margin_bottom = 113.0
text = "ss.pp.text"
align = 1
autowrap = true

[node name="link" type="LinkButton" parent="privacy_policy"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -139.5
margin_top = -4.0
margin_right = 139.5
margin_bottom = 20.0
text = "ss.pp.title"

[node name="check" type="CheckBox" parent="privacy_policy"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -152.5
margin_top = -88.0
margin_right = 152.5
margin_bottom = -64.0
grow_horizontal = 2
text = "ss.pp.accept"

[node name="next" type="Button" parent="privacy_policy"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -64.0
margin_top = -48.0
margin_right = 64.0
margin_bottom = -16.0
disabled = true
text = "ss.pp.accept.butt"

[node name="age" type="WindowDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -240.0
margin_top = -120.0
margin_right = 240.0
margin_bottom = 120.0
popup_exclusive = true
window_title = "ss.a.title"

[node name="age_panel" type="Panel" parent="age"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -25.0
margin_top = -89.0
margin_right = 25.0
margin_bottom = -39.0

[node name="text" type="Label" parent="age/age_panel"]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
custom_fonts/font = SubResource( 2 )
text = "0"
align = 1
valign = 1
clip_text = true

[node name="slider" type="HSlider" parent="age"]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 16.0
margin_top = -16.0
margin_right = -16.0
margin_bottom = 16.0
max_value = 99.0

[node name="accept" type="Button" parent="age"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -56.0
margin_right = 80.0
margin_bottom = -16.0
text = "ss.a.accept"

[node name="comment" type="Label" parent="age"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -96.0
margin_right = 20.0
margin_bottom = -72.0
grow_horizontal = 2
text = "ss.a.comment"
align = 1
valign = 1

[node name="update" type="ConfirmationDialog" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -165.0
margin_top = -39.0
margin_right = 165.0
margin_bottom = 39.0
window_title = "ss.update.title"
dialog_text = "ss.update.text"

[node name="label" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -20.0
margin_top = -32.0
margin_right = 20.0
margin_bottom = -8.0
grow_horizontal = 2
align = 1
valign = 1

[node name="http" type="HTTPRequest" parent="."]
timeout = 15.0

[connection signal="pressed" from="privacy_policy/link" to="." method="open_link"]
[connection signal="toggled" from="privacy_policy/check" to="." method="check_toggled"]
[connection signal="pressed" from="privacy_policy/next" to="." method="accept_policy"]
[connection signal="value_changed" from="age/slider" to="." method="_on_slider_value_changed"]
[connection signal="pressed" from="age/accept" to="." method="accept_consent"]
[connection signal="confirmed" from="update" to="." method="open_update_link"]
